--- a/package.json
+++ b/package.json
@@ -3,8 +3,22 @@
   "version": "1.0.0",
   "description": "A1 Website =================",
   "main": "index.js",
+
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "http-server": "npx http-server -p 9001", 
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview",
+    "htmlhint": "npx htmlhint public src || exit 0",
+    "stylelint": "npx stylelint **/*.css || exit 0",
+    "stylelint:fix": "npx stylelint --fix **/*.css || exit 0",
+    "eslint": "npx eslint . || exit 0",
+    "eslint:fix": "npx eslint --fix . || exit 0",
+    "jsdoc": "npx jsdoc -c .jsdoc.json || exit 0",
+    "lint": "npm run htmlhint && npm run stylelint && npm run eslint",
+    "test": "npm run lint",
+    "clean": "rm -rf build/",
+    "clean-all": "npm run clean && rm -rf node_modules/ && rm -f package-lock.json"
   },
   "repository": {
     "type": "git",
@@ -29,3 +43,5 @@
     "vite": "^7.2.4"
   }
 }
+
+
